language/move-lang/tests/move_check/expansion/duplicate_field_assign.move
module 0x8675309::M {
    struct S { f: u64 }
    fun foo() {
        let f;
        S { f, f } = S { f: 0 };
    }
}
